# ha_ghost_assistant

./: LICENSE  README.md  pyproject.toml  requirements.txt  sample_orb_animation.html
ha_ghost_assistant/: __init__.py  __main__.py  app.py  audio.py  gles_renderer.py  playback.py  renderer.py  wake_word.py  wyoming.py  wyoming_discovery.py  wyoming_server.py
ha_ghost_assistant/wakewords/samantha/: samantha.onnx
scripts/: test_wyoming_describe_ping.py
